# ============================================================================
# libs/ - 内部库模块
# 这个文件是可选的，也可以直接在根 CMakeLists.txt 中添加各个子模块
# 使用这种方式可以更好地组织代码结构
# ============================================================================

# 通用模块（被其他模块依赖，需要最先编译）
add_subdirectory(common)

# TCP 模块
add_subdirectory(tcp)

# UDP 模块
add_subdirectory(udp)

