# ============================================================================
# common 模块 - 线程池等通用工具
# ============================================================================

# ============================================================================
# 创建静态库
# 语法: add_library(<库名> <类型> <源文件...>)
# 类型:
#   - STATIC: 静态库 (.a)，编译时链接，代码会被复制到可执行文件中
#   - SHARED: 动态库 (.so)，运行时链接，多个程序可共享
#   - OBJECT: 对象库，仅编译为 .o 文件，不打包
# ============================================================================
add_library(common STATIC
    src/thread_pool.cpp
)

# ============================================================================
# 设置头文件搜索路径
# 语法: target_include_directories(<目标> <可见性> <路径...>)
# 可见性:
#   - PUBLIC: 本模块和依赖本模块的其他模块都能使用此路径
#   - PRIVATE: 仅本模块内部使用
#   - INTERFACE: 仅依赖本模块的其他模块使用（本模块不用）
# 
# CMAKE_CURRENT_SOURCE_DIR: 当前 CMakeLists.txt 所在目录
# 这里设为 PUBLIC，所以 tcp 模块链接 common 后，也能找到 common/include
# ============================================================================
target_include_directories(common PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# ============================================================================
# 链接依赖库
# 语法: target_link_libraries(<目标> <可见性> <库名...>)
# 可见性含义同上
# pthread: POSIX 线程库
# 设为 PUBLIC 表示依赖 common 的模块也会自动链接 pthread
# ============================================================================
target_link_libraries(common PUBLIC
    pthread
)

